--- a/Prova-V2/package.json
+++ b/Prova-V2/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "cfonts": "^3.1.1",
-    "prompt-sync": "^4.2.0"
+    "prompt-sync": "^4.2.0",
+    "readline": "^1.3.0"
   }
 }
