--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "cfonts": "^3.1.1",
     "prompt-sync": "^4.2.0",
-    "readline": "^1.3.0"
+    "readline": "^1.3.0",
+    "readline-sync": "^1.4.10"
   }
 }
